welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: identifier expected but 'final' found.
	def final():Boolean = {
            ^SnakeBuggle:20: error: illegal start of simple expression
while(final==false) {
      ^SnakeBuggle:31: error: ')' expected but '}' found.
} 
^SnakeBuggle:33: error: Unmatched closing brace '}' ignored here
}
^