welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def final():Boolean = {
		if(estfaceMur  ) {
		getDirection()
		if (getDirection()==direction.EST){
			gauche() 
			if(estFaceMur) { droite(); return true }
			else { droite() ;return false}
		}
		else { droite() }
		if(estFaceMur) { gauche();return true }
		else { gauche();return false}
		}
	}


else{return false}
}

while(final==false) {
	while(!estFaceMur){
		baisseBrosse();avance()
	}
	if(getDirection()==Dorection.EST && final()==false) {
		gauche();avance();gauche()
	}
	if(getDirection()==direction.OUEST && final() && estFaceMur ){
		droite();avance();droite();
	}
}
}